fixed player info icons vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,7 @@ section {
 footer {
     padding: 1rem 0;
     display: flex;
+    font-size: 12px;
 
     background-color: var(--col-gray-700);
 }
@@ -548,10 +549,9 @@ footer > * {
 
 .player-info-right {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    align-content: center;
-    gap: 0.25rem;
+    gap: 0.5rem;
 }
 
 
